--- a/src/Dashboard/pages/css/Outlet/Outlet.css
+++ b/src/Dashboard/pages/css/Outlet/Outlet.css
@@ -22,6 +22,7 @@
   white-space: nowrap;
   overflow: hidden;
   animation: typing 3.5s steps(40, end) forwards; 
+  padding-bottom: 15px ;
 }
 
 @keyframes typing {
