--- a/src/Dashboard/style.css
+++ b/src/Dashboard/style.css
@@ -284,3 +284,36 @@
     box-shadow: 0 0 20px rgba(174, 137, 28, 0.886);
   }
 }
+
+.language-selector {
+  display: flex;
+  align-items: center;
+}
+
+.language-selector button {
+  display: flex;
+  align-items: center;
+  border: none;
+  background: none;
+  cursor: pointer;
+  padding: 5px;
+}
+
+.language-selector button img.flag-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+.language-selector button.active {
+  cursor: default;
+  color: grey;
+}
+
+.language-selector button:disabled {
+  opacity: 0.5;
+}
+
+.css-1ytufz-MuiAvatarGroup-root {
+  justify-content: center;
+}
