--- a/src/Dashboard/pages/css/ReportDetails/SendEmail.css
+++ b/src/Dashboard/pages/css/ReportDetails/SendEmail.css
@@ -51,7 +51,6 @@
 
 .fondo-body-send-email{
         background-color: #2E2E2E; 
-
 }
 
 .input-group:hover .cco-input {
@@ -86,28 +85,29 @@
 .suggestions-container {
     position: absolute;
     top: 100%; 
-    background-color: #cccccc ;
-    width: calc(100% - 30px);
-    max-height: 150px;
-    border-bottom-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    background-color: #585858 ;
+    width: 100%;
+    max-height: 200px;
     z-index: 1000; /* Asegúrate de que el dropdown esté por encima de otros elementos */
     overflow-y: auto;
+    border-radius: 8px;
+    margin: 10px 0px;
 }
 
 .input-group:hover .suggestions-container {
-    display: block; /* Mostrar cuando el input está activo */
+  display: block; /* Mostrar cuando el input está activo */
+  border: 1px solid rgb(130, 129, 128);
 }
 
 .suggestion-item {
-    padding: 8px;
     cursor: pointer;
-    color: #333;
-    border-bottom: 1px solid #666;
+    color: #e5e0e0;
+    padding-left: 15px;
 }
 
 .suggestion-item:hover {
-    background-color: rgb(234, 190, 63); /* Un poco más oscuro al pasar el mouse */
+    background-color: rgb(104, 104, 102);
+    color: #333; /* Un poco más oscuro al pasar el mouse */
 }
 
 .p-fluid .p-inputtext {
@@ -119,9 +119,19 @@
 .p-chips .p-chips-multiple-container .p-chips-token{
     margin-top: 6px;
     background-color: rgb(234, 190, 63);
-    color: #333;
 }
 
 .p-chips .p-chips-multiple-container .p-chips-input-token input{
     border: none;
+    color: #f6f6f6;
 }
+
+.css-10hburv-MuiTypography-root{
+    color:rgb(234, 190, 63)
+}
+
+.suggestion-item .MuiListItemText-secondary {
+    color: #d7d7d7; /* Cambia el color del texto secundario */
+  }
+
+  
